2016-12-14  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/plots.py(scatter_density_plot_matrix):

	- Removed erroneous reference to hist2d, replaced by hexbin

	* typhon/datasets/tovs.py:

	(HIRS.__init__):

	- Inform that hrs_scnlin is always needed

	(HIRS.read_period):

	- Suppress FutureWarning triggered by masked array module when
	selecting multiple fields from a structured masked array

	* typhon/datasets/dataset.py:

	(Dataset):

	- Add attribute `mandatory_fields`.  When populated, Dataset.read will
	ensure that those fields are always passed on to the low-level,
	instrument-specific reading routine.

	(Dataset.read_period):

	- On 29 November I added that ValueError should be caught here.  Undo
	this; it catches too many false positives.  Instead, ValueError should
	be caught at a lower level and then chained into a descendent of
	DataFileError.

2016-12-14  Lukas Kluft  <lukas.kluft@gmail.com>

	* typhon/oem/__init__.py: Divided package content into submodules.

	Import modules common and error.

	* typhon/oem/common.py: General functions connected to OEM.

	Currently containing functions to calculate averaging kernels or error
	covariance matrices.

	* typhon/oem/error.py: Functions to estimate the retrieval error.

	Currenlty containing functions to estimate smoothing error and retrieval
	noise.

2016-12-13  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/plots.py(scatter_density_plot_matrix):

	- Allow alternate way of passing data to be plotted, i.e. as keyword
	arguments.  This should be nicer in Python 3.6+ as keyword argument
	order will be preserved.

	- Add some examples to documentation, either with structured array or
	with keyword arguments.

2016-12-12  Gerrit Holl  <g.holl@reading.ac.uk>

	* typhon/plots/plots.py(scatter_density_plot_matrix): 

	- Allow to pass units for x- and y-axes

	- Bugfix in range handling

	- Raise a warning if range is empty for a subplot

2016-12-12  Gerrit Holl  <g.holl@reading.ac.uk>
